<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.screens.withDraw_Fragment.ItemListWithdraw">

    <TextView
        android:id="@+id/tv_Name_Withdraw"
        android:layout_width="371dp"
        android:layout_height="61dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Currency_Withdraw"
        android:layout_width="367dp"
        android:layout_height="56dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_currency"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Name_Withdraw" />

    <TextView
        android:id="@+id/tv_Withdraw"
        android:layout_width="363dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_number_withdraw"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Currency_Withdraw" />

    <Button
        android:id="@+id/btn_Reject_Withdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_reject"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Withdraw" />

    <Button
        android:id="@+id/btn_Acciept_Withdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_accept"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Reject_Withdraw"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Withdraw" />

</androidx.constraintlayout.widget.ConstraintLayout>