<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/client"
    tools:context=".home.EmployeeHome">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="369dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/title_welcome_bank"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="232dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.722"
        tools:layout_editor_absoluteX="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#83C1BB">


            <Button
                android:id="@+id/btn_HistoryDeposit"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_DepositAccess"
                android:layout_alignStart="@+id/btn_DepositAccess"
                android:layout_alignEnd="@+id/btn_DepositAccess"
                android:layout_marginStart="7dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/btn_top"
                android:fontFamily="sans-serif-black"
                android:text="@string/btn_history_deposit"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_WithdrawAccess"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/btn_top"
                android:fontFamily="sans-serif-black"
                android:text="@string/btn_withdraw_access"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_DepositAccess"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="49dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/btn_top"
                android:fontFamily="sans-serif-black"
                android:text="@string/btn_deposit_access"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_HistoryWithdraw"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_WithdrawAccess"
                android:layout_alignParentStart="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/btn_top"
                android:fontFamily="sans-serif-black"
                android:text="@string/btn_history_withdraw"
                android:textSize="16sp">

            </Button>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>