<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deposit_Fragment.DepositStatus">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:background="#63ABCD"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/viewpager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-black" />
    </com.google.android.material.tabs.TabLayout>


    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="404dp"
        android:layout_height="203dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/balance"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="61dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/balance_amount"
            android:textColor="#0357AE"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tv2BalanceNumber"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="50dp"
            android:layout_toEndOf="@+id/tvBalance"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/balance_number"
            android:textColor="#0357AE"
            android:textSize="35sp" />


    </RelativeLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">


    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20pt"
        android:clickable="true"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@id/viewpager"
        app:layout_constraintEnd_toEndOf="@+id/viewpager"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="409dp"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/from"
            android:gravity="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etFrom"
            android:layout_width="96dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@+id/textView6"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/hint_input_from"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="39dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@+id/etFrom"
            android:fontFamily="sans-serif-black"
            android:text="@string/to"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etTo"
            android:layout_width="86dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/textView7"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/hint_input_to"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/btnAplay"
            android:layout_width="73dp"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/etTo"
            android:fontFamily="sans-serif-black"
            android:text="@string/btn_apply"
            android:textSize="10sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>